--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   background-color: var(--hero-section-color);
+
+  /* max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto; */
 }
 
 .container {
@@ -224,15 +228,14 @@ img {
 .hero-section {
   padding-top: 188px;
   padding-bottom: 188px;
+  margin-left: auto;
+  margin-right: auto;
 
   background-color: var(--heading-text-color);
   background-image: var(--hero-bg), url(../images/hero/hero-bcg.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
-}
-
-.hero-background {
+  background-size: 1440px , contain;
 }
 
 .hero-title {
