--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,15 @@ body {
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
+  /* margin-left: auto;
+  margin-right: auto;
+
+  max-width: 1440px; */
+}
+
+.card-desc-wrapper {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .visually-hidden {
@@ -114,11 +123,6 @@ img {
   color: var(--main-text-color);
 
   line-height: 1.5;
-}
-
-.card-desc-wrapper {
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 /* -----------------SITE-HEADER------------------------ */
@@ -231,11 +235,14 @@ img {
   margin-left: auto;
   margin-right: auto;
 
+  max-width: 1440px;
+  height: 600px;
+
   background-color: var(--heading-text-color);
   background-image: var(--hero-bg), url(../images/hero/hero-bcg.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1440px , contain;
+  background-size: contain;
 }
 
 .hero-title {
@@ -332,6 +339,39 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+}
+
+.socials-list {
+  margin-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.socials-item {
+  width: 40px;
+  height: 40px;
+}
+
+.socials-item-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.socials-item-link:is(:hover, :focus) {
+  background-color: var(--pressed-state-color);
+}
+
+.socials-icon {
+  fill: var(--light-mode-color);
 }
 
 /* -------------------------FOOTER-------------------------- */
