--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,7 @@ img {
 .customers-list {
   display: flex;
   gap: 24px;
+  align-items: center;
 }
 
 .customers-item {
@@ -391,12 +392,14 @@ img {
 .customers-link {
   border: 1px solid var(--subtle-text-color);
   border-radius: 4px;
+
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content:space-between;
 
   width: 100%;
   height: 100%;
+
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 32px;
