--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --accent-color: #e7e9fc;
   --light-mode-color: #f4f4fd;
   --hero-section-color: #ffffff;
+  --success-color: #31d0aa;
   --hero-bg: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
 }
 
@@ -275,6 +276,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   background-color: var(--primary-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--hero-section-color);
   letter-spacing: 0.04em;
 }
@@ -293,6 +295,11 @@ img {
 
 .feauters-item {
   flex-basis: calc((100%-72px) / 4);
+}
+
+.feauters-icon {
+  background-color: var(--light-mode-color);
+  border-radius: 4px;
 }
 
 /* ----------------- OUR SERVICES------------------ */
@@ -382,11 +389,11 @@ img {
 .customers-list {
   display: flex;
   gap: 24px;
-  align-items: center;
 }
 
 .customers-item {
   flex-basis: calc((100%-120px) / 6);
+  height: 88px;
 }
 
 .customers-link {
@@ -395,34 +402,42 @@ img {
 
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content: center;
 
   width: 100%;
   height: 100%;
-
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 32px;
-  padding-right: 32px;
 }
 
-.
+.customers-icon {
+  fill: currentColor;
+}
+
+.customers-link:is(:hover, :focus) {
+  border-color: var(--pressed-state-color);
+  color: var(--pressed-state-color);
+}
+
 /* -------------------------FOOTER-------------------------- */
 
 .footer {
-  /* background-color: var(--heading-text-color);
-  color: var(--accent-color); */
+  background-color: var(--heading-text-color);
+  color: var(--accent-color);
 }
 
 .footer-section {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: var(--heading-text-color);
-  color: var(--accent-color);
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .footer-content-wrapper {
   max-width: 264px;
+  margin-right: 120px;
 }
 
 .logo.footer {
@@ -433,6 +448,30 @@ img {
   margin-top: 16px;
 
   line-height: 1.5;
+}
+
+.footer-socials .section-subtitle {
+  color: var(--hero-section-color);
+  font-size: 16px;
+}
+
+.footer-socials .footer-text {
+  margin-top: 0;
+}
+
+.footer-socials .socials-list {
+  margin-top: 16px;
+  padding-left: 0;
+  padding-right: 0;
+  gap: 16px;
+}
+
+.footer-socials .socials-item-link {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.footer-socials .socials-item-link:is(:hover, :focus) {
+background: var(--success-color);
 }
 
 /* ------------------------------ PAGE 2  ---------------------- */
