--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,6 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   background-color: var(--hero-section-color);
-
-  /* max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto; */
 }
 
 .container {
@@ -35,10 +31,6 @@ body {
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
-  /* margin-left: auto;
-  margin-right: auto;
-
-  max-width: 1440px; */
 }
 
 .card-desc-wrapper {
@@ -208,10 +200,6 @@ img {
   display: flex;
   gap: 40px;
 }
-/* 
-.address-link:not(:last-child) {
-  margin-right: 40px;
-} */
 
 .address-link .link {
   display: block;
@@ -240,7 +228,6 @@ img {
   max-width: 1440px;
   height: 600px;
 
-  background-color: var(--heading-text-color);
   background-image: var(--hero-bg), url(../images/hero/hero-bcg.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -294,12 +281,9 @@ img {
 }
 
 .feauters-item {
-  flex-basis: calc((100%-72px) / 4);
-}
-
-.feauters-icon {
-  background-color: var(--light-mode-color);
   border-radius: 4px;
+  height: 112px;
+  flex-basis: calc((100%-72px) / 4);
 }
 
 /* ----------------- OUR SERVICES------------------ */
@@ -397,15 +381,19 @@ img {
 }
 
 .customers-link {
-  border: 1px solid var(--subtle-text-color);
-  border-radius: 4px;
-
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  width: 100%;
-  height: 100%;
+  color: var(--subtle-text-color);
+  border: 1px solid var(--subtle-text-color);
+  border-radius: 4px;
+}
+
+.customers-link:visited {
+  color: var(--subtle-text-color);
 }
 
 .customers-icon {
@@ -471,7 +459,7 @@ img {
 }
 
 .footer-socials .socials-item-link:is(:hover, :focus) {
-background: var(--success-color);
+  background: var(--success-color);
 }
 
 /* ------------------------------ PAGE 2  ---------------------- */
@@ -510,8 +498,11 @@ background: var(--success-color);
 
 .filter-btn:hover,
 .filter-btn:focus {
+  border: var(--pressed-state-color);
   background-color: var(--pressed-state-color);
   color: var(--hero-section-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ------------------------- POTFOLIO ----------------------- */
@@ -525,10 +516,29 @@ background: var(--success-color);
 
 .project-item {
   flex-basis: calc((100% - 48px) / 3);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.project-item .card-desc-wrapper {
+.project-img {
+  background-color: var(--primary-color);
+}
+
+.project-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-link .card-desc-wrapper {
   border: 1px solid var(--accent-color);
-  border-top: 0;
+
+  border-top: none;
   padding-left: 16px;
+}
+
+.project-link:is(:hover, :focus) .card-desc-wrapper {
+  border: 0.5px solid var(--light-mode-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
