--- a/css/styles.css
+++ b/css/styles.css
@@ -282,8 +282,19 @@ img {
 
 .feauters-item {
   border-radius: 4px;
-  height: 112px;
   flex-basis: calc((100%-72px) / 4);
+}
+
+.feauters-img {
+  height: 112px;
+  border-radius: 4px;
+  background-color: var(--light-mode-color);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 8px;
 }
 
 /* ----------------- OUR SERVICES------------------ */
@@ -526,8 +537,6 @@ img {
 .project-link {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
 .project-link .card-desc-wrapper {
@@ -539,6 +548,7 @@ img {
 
 .project-link:is(:hover, :focus) .card-desc-wrapper {
   border: 0.5px solid var(--light-mode-color);
+  border-top: none;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
